default/objects/Account_Map_Member__c/Account_Map_Member__c.object-meta.xml
<CustomObject>
    <label>Account Map Member</label>
    <nameField>
        <displayFormat>CHM-{0000}</displayFormat>
        <label>Account Map Member Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Map Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>