default/objects/Account_Map_Member__c/fields/Account_Relationship_Map__c.field-meta.xml
<CustomField>
    <fullName>Account_Relationship_Map__c</fullName>
    <label>Account Relationship Map</label>
    <referenceTo>Account_Relationship_Map__c</referenceTo>
    <relationshipLabel>Account Map Members</relationshipLabel>
    <relationshipName>Account_Map_Members</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>