default/objects/Account_Map_Member__c/fields/Local_Influence__c.field-meta.xml
<CustomField>
    <fullName>Local_Influence__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Local Influence</label>
    <referenceTo>pq_Influence__c</referenceTo>
    <relationshipLabel>Account Map Members</relationshipLabel>
    <relationshipName>Account_Map_Members</relationshipName>
    <type>Lookup</type>
</CustomField>