default/objects/Account_Map_Member__c/fields/Local_Support__c.field-meta.xml
<CustomField>
    <fullName>Local_Support__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Local Support</label>
    <referenceTo>pq_Support__c</referenceTo>
    <relationshipLabel>Account Map Members</relationshipLabel>
    <relationshipName>Account_Map_Members</relationshipName>
    <type>Lookup</type>
</CustomField>